<resources>
    <string name="app_name">职场护航</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="information">资讯</string>
    <string name="home">首页</string>
    <string name="occupation">职业体检</string>
    <string name="userinfo">个人中心</string>
    <string name="cancle">取消</string>
    <string name="share_to">分享到</string>
    <string name="qq_friend">QQ好友</string>
    <string name="weixin_friend">微信好友</string>
    <string name="qzone">QQ空间</string>
    <string name="wchat">微信朋友圈</string>
    <string name="test">性格测试</string>
    <string name="phone">手机号</string>
    <string name="pws">密码</string>
    <string name="code">验证码</string>
    <string name="set_pwd">设置密码,6-32位数字或字母</string>
    <string name="login">登录</string>
    <string name="forget_pwd">忘记密码?</string>
    <string name="get_code">获取验证码</string>
    <string name="registered_account">注册账号</string>
    <string name="registered">立即注册</string>
    <string name="save">保存</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="begin">开始(h)</string>
    <string name="end">结束</string>
    <string name="duration">持续时间(h)</string>
    <string name="all_text">展开全文</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_registered">RegisteredActivity</string>
    <string name="title_activity_my_message">MyMessageActivity</string>
    <string name="title_activity_my_test">MyTestActivity</string>
    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="title_activity_forget_pwd">ForgetPwdActivity</string>
    <string name="title_activity_web">WebActivity</string>
    <string name="title_activity_server_web">ServerWebActivity</string>
    <string name="title_activity_case_analysis">CaseAnalysisActivity</string>
    <string name="title_activity_my_reservation">MyReservationActivity</string>
    <string name="title_activity_set">SetActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_fist_choice_city">FistChoiceCityActivity</string>
    <string name="title_activity_identity_authen">IdentityAuthenActivity</string>
    <string name="title_activity_certification_notice">CertificationNoticeActivity</string>
    <string name="title_activity_code_selection">CodeSelectionActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_rights_pross">RightsProssActivity</string>
    <string name="title_activity_rights_protection_task">RightsProtectionTaskActivity</string>
    <string name="title_activity_rights_details">RightsDetailsActivity</string>
    <string name="title_activity_rights">RightsActivity</string>
    <string name="title_activity_legal_provisions">LegalProvisionsActivity</string>
    <string name="title_activity_lawyers_to_join">LawyersToJoin</string>
    <string name="title_activity_iwant_to_join">IWantToJoinActivity</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="title_activity_picture">PictureActivity</string>
</resources>
