<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#77000000"
    android:id="@+id/framelayout">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layout_gravity="bottom"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/share_to"
        android:gravity="center"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_gray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_weixin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/weixin_friend"
            android:layout_gravity="center_vertical"
            android:textColor="@color/black"
            android:drawablePadding="10dp"
            android:layout_marginLeft="20dp"
            android:drawableTop="@mipmap/ic_share_weixin"/>
        <TextView
            android:id="@+id/tv_qq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/qq_friend"
            android:layout_marginLeft="20dp"
            android:drawablePadding="10dp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/black"
            android:drawableTop="@mipmap/ic_share_qq"/>
        android:drawableTop="@mipmap/ic_share_weixin"/>
        <TextView
            android:id="@+id/tv_qzone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/qzone"
            android:layout_marginLeft="20dp"
            android:drawablePadding="10dp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/black"
            android:drawableTop="@mipmap/qzone"/>
        <TextView
            android:id="@+id/tv_wchat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/wchat"
            android:layout_marginLeft="20dp"
            android:drawablePadding="10dp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/black"
            android:drawableTop="@mipmap/wchat"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_gray"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/cancle"
        android:textColor="#0AC08D"
        android:gravity="center"/>
</LinearLayout>
</FrameLayout>
