<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_buttom_color"
    android:orientation="vertical">

    <include layout="@layout/layout_head_bar"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginRight="@dimen/dp20"
        android:layout_marginTop="@dimen/dp20"
        android:background="@drawable/bg_withe_radius"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp60"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp10"
                android:layout_gravity="center"
                android:src="@mipmap/phone" />

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp50"
                android:background="@null"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/dp10"
                android:hint="@string/phone"
                android:textColor="@color/black"
                android:inputType="number"
                android:paddingBottom="@dimen/dp10"
                android:paddingTop="@dimen/dp10"
                android:textColorHint="@color/black" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/one"
            android:background="@color/line_gray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp60"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp10"
                android:layout_gravity="center"
                android:src="@mipmap/set_pwd" />

            <EditText
                android:id="@+id/et_pwd"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp50"
                android:background="@null"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/dp10"
                android:hint="@string/pws"
                android:textColor="@color/black"
                android:paddingBottom="@dimen/dp10"
                android:paddingTop="@dimen/dp10"
                android:digits="0123456789qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
                android:inputType="textPassword"
                android:textColorHint="@color/black" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginRight="@dimen/dp20"
        android:layout_marginTop="@dimen/dp20"
        android:text="@string/login"
        android:background="@drawable/bg_red_radius"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dp30"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_forget_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp20"
            android:text="@string/forget_pwd"/>
        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dp20"
            android:text="@string/registered_account"/>
    </RelativeLayout>
</LinearLayout>
