<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background_color"
    android:orientation="vertical">
<include
    layout="@layout/title"/>
    <LinearLayout
        android:id="@+id/ll_no_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp20"
            android:layout_marginRight="@dimen/dp20"
            android:layout_marginTop="@dimen/dp20"
            android:background="@drawable/bg_withe_radius"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp60"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/dp10"
                    android:src="@mipmap/phone" />

                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp50"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/dp10"
                    android:background="@null"
                    android:hint="@string/phone"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:paddingBottom="@dimen/dp10"
                    android:paddingTop="@dimen/dp10"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/one"
                android:background="@color/line_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp60"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/dp10"
                    android:src="@mipmap/set_pwd" />

                <EditText
                    android:id="@+id/et_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp50"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/dp10"
                    android:background="@null"
                    android:hint="@string/pws"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:digits="0123456789qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
                    android:paddingBottom="@dimen/dp10"
                    android:paddingTop="@dimen/dp10"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp20"
            android:layout_marginRight="@dimen/dp20"
            android:layout_marginTop="@dimen/dp20"
            android:background="@drawable/bg_red_radius"
            android:text="@string/login" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp30">

            <TextView
                android:id="@+id/tv_forget_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp20"
                android:text="@string/forget_pwd" />

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/dp20"
                android:text="@string/registered_account" />
        </RelativeLayout>
    </LinearLayout>
    <!--
    登录后的界面
    -->
    <LinearLayout
        android:id="@+id/ll_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <RelativeLayout
            android:id="@+id/rl_user_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <ImageView
                android:id="@+id/iv_user"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:paddingTop="@dimen/five"
                android:paddingBottom="@dimen/five"
                android:layout_marginLeft="@dimen/dp10"
                android:src="@mipmap/bg_p_d_avatar" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/five"
                android:layout_toRightOf="@+id/iv_user"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp15" />

                <TextView
                    android:id="@+id/tv_user_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/five"
                    android:textColor="@color/main_test_color"
                    android:textSize="@dimen/sp15" />
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp10"
                android:src="@mipmap/ic_more" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/one"
            android:background="@color/line_gray"></View>

        <View

            android:layout_width="match_parent"
            android:layout_height="@dimen/one"
            android:layout_marginTop="@dimen/dp20"
            android:background="@color/line_gray"></View>

        <LinearLayout
            android:id="@+id/ll_add_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">
        </LinearLayout>
        <com.chanlytech.ui.widget.NotScrollListView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:divider="@null"
            android:listSelector="@android:color/transparent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>
