<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_head_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginRight="@dimen/dp20"
        android:layout_marginTop="@dimen/dp20"
        android:background="@drawable/bg_withe_radius"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp60"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/dp10"
                android:src="@mipmap/phone" />

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp50"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dp10"
                android:background="@null"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:hint="@string/phone"
                android:textSize="13sp"
                android:textColor="@color/black"
                android:paddingBottom="@dimen/dp10"
                android:paddingTop="@dimen/dp10"
                android:textColorHint="@color/black" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/one"
            android:background="@color/line_gray" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/dp10"
                android:src="@mipmap/code" />

            <EditText
                android:id="@+id/et_code"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp50"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp10"
                android:layout_toLeftOf="@+id/btn_getcode"
                android:layout_toRightOf="@+id/iv_code"
                android:background="@null"
                android:textSize="13sp"
                android:textColor="@color/black"
                android:inputType="number"
                android:imeOptions="actionNext"
                android:hint="@string/code"
                android:paddingBottom="@dimen/dp10"
                android:paddingTop="@dimen/dp10"
                android:textColorHint="@color/black" />

            <Button
                android:id="@+id/btn_getcode"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp40"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/ten"
                android:background="@drawable/bg_red_hollow_radius"
                android:text="@string/get_code"
                android:textColor="@color/red" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/one"
            android:background="@color/line_gray" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/dp10"
                android:src="@mipmap/set_pwd" />

            <EditText
                android:id="@+id/et_pwd"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp50"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp10"
                android:layout_toLeftOf="@+id/radio_pwd_show"
                android:layout_toRightOf="@+id/iv_pwd"
                android:background="@null"
                android:password="true"
                android:inputType="textPassword"
                android:maxLength="32"
                android:digits="0123456789qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
                android:imeOptions="actionDone"
                android:textSize="13sp"
                android:hint="输入新密码"
                android:paddingBottom="@dimen/dp10"
                android:textColor="@color/black"
                android:paddingTop="@dimen/dp10"
                android:textColorHint="@color/black" />

            <ImageView
                android:id="@+id/radio_pwd_show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/ten"
                android:background="@mipmap/ic_view"
                android:visibility="gone"
                />
        </RelativeLayout>
    </LinearLayout>


    <Button
        android:id="@+id/btn_registered"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginRight="@dimen/dp20"
        android:layout_marginTop="@dimen/dp20"
        android:textSize="@dimen/sp15"
        android:background="@drawable/bg_red_radius"
        android:text="@string/save" />
</LinearLayout>
